fix: keyboardmenu z-index

--- a/public/styles/keyboard-menu.css
+++ b/public/styles/keyboard-menu.css
@@ -2,6 +2,7 @@
   border: 1px solid var(--border-color);
   background: var(--menu-background);
   position: absolute;
+  z-index: 2;
 }
 .keyboard-menu button {
  display: flex;
